# ztp-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
config/: configuration-development.yml  configuration.yml
migrations/: 20240218170401_create_subscriptions_table.sql  20240223140533_create_subscription_confirmation_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_details.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
