[package]
name = "ztp-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ztp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
