[package]
name = "ztp-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ztp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.34", features = ["clock"] }
config = "0.14.0"
reqwest = "0.11.20"
serde = { version="1.0.196",features=["derive"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate"
]
